Opened 16 years ago

Closed 16 years ago

#3585 closed bug (fixed)

endless loop in heap grower

Reported by: axeld Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The heap grower thread just knocked out one of my cores. Unfortunately, I was still too sleepy to get a stack crawl; I hope this happens again.

Change History (2)

comment:1 by axeld, 16 years ago

More info, I get this one when it happens - it seems it's currently always reproducible when the app I'm currently working on crashes:

KERN: thread 1147 tried to acquire kernel semaphore 0.

From then on, the heap grower is always trying to acquire semaphore 0 which obviously fails every time. Maybe that semaphore is deleted from userland somehow, I'll have a look.

comment:2 by axeld, 16 years ago

Resolution: fixed
Status: newclosed

Indeed, the semaphore got deleted. Fixed in hrev29621.

Note: See TracTickets for help on using tickets.